# ab-glyph

./: .gitignore  Cargo.toml  LICENSE  README.md  test
.github/workflows/: ci.yml
dev/: Cargo.toml
dev/benches/: draw.rs  font_method.rs  layout.rs  layout_draw.rs  rasterize.rs
dev/examples/: ascii.rs  image.rs
dev/src/: layout.rs  lib.rs  ref_raster.rs
dev/tests/: issues.rs  render_reference.rs  usage.rs
glyph/: CHANGELOG.md  Cargo.toml  README.md
glyph/src/: codepoint_ids.rs  err.rs  font.rs  font_arc.rs  glyph.rs  lib.rs  nostd_float.rs  outlined.rs  outliner.rs  scale.rs  skrifa.rs  ttfp.rs  variable.rs
glyph/src/skrifa/: outliner.rs
glyph/src/ttfp/: bbox.rs  outliner.rs  owned.rs  variable.rs
rasterizer/: CHANGELOG.md  Cargo.toml
rasterizer/src/: geometry.rs  lib.rs  nostd_float.rs  raster.rs
