[package]
name = "dev"
version = "0.1.0"
description = "Tests, examples & benchmarks avoiding dependency feature bleed"
edition = "2018"
publish = false

[dependencies]
ab_glyph_rasterizer = { path = "../rasterizer" }
ab_glyph = { path = "../glyph" }
image = { version = "0.23", default-features = false, features = ["png"] }
# once_cell = "1"
criterion = "0.3"
blake2 = "0.8"

[[bench]]
name = "rasterize"
harness = false

[[bench]]
name = "layout"
harness = false
