[package]
name = "dev"
version = "0.1.0"
description = "Tests, examples & benchmarks avoiding dependency feature bleed"
edition = "2018"
publish = false

[dependencies]
ab_glyph_rasterizer = { path = "../rasterizer" }
ab_glyph = { path = "../glyph" }
image = { version = "0.24", default-features = false, features = ["png"] }
criterion = "0.5"
blake2 = "0.10"
approx = "0.5"

[[bench]]
name = "rasterize"
harness = false

[[bench]]
name = "layout"
harness = false

[[bench]]
name = "layout_draw"
harness = false

[[bench]]
name = "font_method"
harness = false
