[package]
name = "ab_glyph"
version = "0.2.32"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2021"
description = "API for loading, scaling, positioning and rasterizing OpenType font glyphs."
repository = "https://github.com/alexheretic/ab-glyph"
keywords = ["text", "ttf", "truetype", "otf", "opentype"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
owned_ttf_parser = { version = "0.25", default-features = false }
ab_glyph_rasterizer = { version = "0.1.2", path = "../rasterizer", default-features = false }
# no_std float stuff
libm = { version = "0.2.1", optional = true }
skrifa = { version = "0.35.0", default-features = false }
self_cell = "1.2.0"

[dev-dependencies]
# don't add any, instead use ./dev

[features]
default = ["std", "variable-fonts", "gvar-alloc"]
# Activates usage of std.
std = ["owned_ttf_parser/default", "ab_glyph_rasterizer/default", "skrifa/std"]
# Uses libm when not using std. This needs to be active in that case.
libm = ["dep:libm", "ab_glyph_rasterizer/libm", "owned_ttf_parser/no-std-float"]
# Enables `VariableFont` functionality.
variable-fonts = ["owned_ttf_parser/variable-fonts"]
# Enables full gvar table support.
gvar-alloc = ["owned_ttf_parser/gvar-alloc"]
